samples/_failures_safe/1761427099_3de967_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c06061de.c: In function ‘process_event’:
./samples/SAFE/__tmp_c06061de.c:179:9: error: expected ‘:’ or ‘...’ at end of input
  179 |         case STATE_DONE
      |         ^~~~
./samples/SAFE/__tmp_c06061de.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c06061de.c:179:9: error: expected declaration or statement at end of input
